--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Rabbit-Hole-Contracts",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
@@ -9,6 +10,7 @@
     "hardhat": "^2.9.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@openzeppelin/contracts": "^4.5.0",
+    "@uniswap/v3-periphery": "^1.4.0"
   }
 }
