--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hardhat": "^2.9.1"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.4.2",
     "@openzeppelin/contracts": "^4.5.0",
     "@uniswap/v3-periphery": "^1.4.0"
   }
